[v8r4p2]
use DIRAC v6r16
* Use LCgVersion 2016-11-03


[v8r4p1]
use DIRAC v6r16
* Use LCgVersion 2016-11-03

[v8r4]
use DIRAC v6r16
* change version for qt, pygraphics
* Continue execution
* Added elog credential check
* Re-added SLSAgent
* simple bug fix
* removed old test
* added missing agents
* Removed dependencies from SAM
* adding Monitoring to Jenkins
* Use LcgVer = 2016-10-24
* Update projectConfig.json
* Version without CMT
* unecessary files removed
* added monitoring system and NoSQLDB connection paramenters
* bug fix
* Some Certification tests
* Set default dryRun to True
* bug fixes for ProductionRequestDB
* Added Error code and corrected docstring
* Use LCG 85a
* Get sites from logbook
* Use eLog API instead of binary
* Added documentation for elog binary
* Extended email agent to post status changes to elog
* removed unused/untested production test infrastructure
* using proxy of connecting user for submitting production
* removed use of types
* RSS system test
* remove lbvobox24
* remove lbvobox23
* remove lbvobox13
* remove lbvobox12
* remove lbvobox16
* remove lbvobox32
* remove lbvobox07
* remove lbvobox22
* web server is updated differently
* Use External v6r4p2
* remove pre-version
* remove CMT reference for project
* MOve create_vobox_update from LHCbDiracPolicy to dist-tools
* change version of pre-release
* extract pyparsing
* Chnage the break statement by return to stop the execution if the SOAP interface is not accessible
* Break if the soap interface not accessible
* change version of pre-release

[v8r3p12]
use DIRAC v6r15p21

* Use GridCEType to be consistent with existing GridCE
* Use CommandExtensions and port 443
* not use file as variable name
* pilot.json filename and LHCb portal host name
* Import version with Setups and CEs sections
* Use lastRun
* keep in cache the actual RAW ancestors rather than count (due to common ancestors)
* New file with transf0rmation-debug actual code
* Move active methods to a Client file