@@ -16,7 +16,7 @@ __path__ = extend_path( __path__, __name__ )
 
 majorVersion = 8
 minorVersion = 4
-patchLevel = 2
+patchLevel = 3
 preVersion = 0
 
 version = "v%sr%s" % ( majorVersion, minorVersion )
