@@ -8,6 +8,12 @@ Sources
 Releases
 {
 
+  v8r4p3
+  {
+    Modules = LHCbDIRAC:v8r4p3, LHCbWebDIRAC:v4r2p1
+    Depends = DIRAC:v6r16p1
+    LcgVer = 2016-11-03
+  }
   v8r4p2
   {
     Modules = LHCbDIRAC:v8r4p2, LHCbWebDIRAC:v4r2
