@@ -1,3 +1,8 @@
+[v8r4p3]
+use DIRAC v6r16p1
+* Change the import for suds module
+* correct the dirac-install command
+
 [v8r4p2]
 use DIRAC v6r16
 * Use LCgVersion 2016-11-03
